qt-codes-advantech/WRY-Fixed-Errors/Fix_DI_DIInterrupt-errors.txt
// FILE: Fix_DI_DIInterrupt-errors.txt
// DATE: Thu 04 May 2023 04:26:03 PM +08
// USING QT5 in QtCreator

DIGITAL INPUT DI_DIInterrupt FOR PCIE-1884 ADVANTECH CARD

=====================================================================
// ERROR NO 01
// INSIDE configuredialog.h  LINE 5
#include <bdaqctrl.h>
// #include "../../../inc/bdaqctrl.h"

// ERROR NO 02
// INSIDE diinterrupt.h LINE 15
// CONSTRUCTOR
	// DIStatusChangeInterrupt(QWidget *parent = 0, Qt::WindowFlags flags = 0);
	   DIStatusChangeInterrupt(QWidget *parent = 0, Qt::WindowFlags flags = Qt::WindowFlags());

// ERROR NO 03
// INSIDE configuredialog.cpp LINE 110
        str.asprintf("Error:the error code is 0x%x\n\
                         The %s is busy or not exit in computer now.\n\
                         Select other device please!", errorCode, des.toUtf8().data());

     // str.sprintf("Error:the error code is 0x%x\n\
     //					 The %s is busy or not exit in computer now.\n\
     //                  Select other device please!", errorCode, des.toUtf8().data());

// ERROR NO 04
/home/wruslan/WRY-pcie1884-qt5/Qt/DI_DIInterrupt/configuredialog.cpp:140: error: invalid conversion from ‘int’ to ‘Qt::WindowType’ [-fpermissive]
../DI_DIInterrupt/configuredialog.cpp: In member function ‘void ConfigureDialog::DeviceChanged(int)’:
../DI_DIInterrupt/configuredialog.cpp:140:43: error: invalid conversion from ‘int’ to ‘Qt::WindowType’ [-fpermissive]
  140 |         m_portPanel[i] = new DioPortUI(0, 0, portIndexes[i], ports[portIndexes[i]], images);
      |                                           ^
      |                                           |
      |                                           int
// SOLUTION FOR ERROR NO 04
// ERROR NO 4
     // m_portPanel[i] = new DioPortUI(0, 0, portIndexes[i], ports[portIndexes[i]], images);
        m_portPanel[i] = new DioPortUI(0, Qt::WindowFlags(), portIndexes[i], ports[portIndexes[i]], images);


 

REFERENCES:   
===================================================   
https://doc.qt.io/qt-6/qvboxlayout.html      
https://doc.qt.io/qt-5/qbuttongroup.html
https://doc.qt.io/qt-6/qbuttongroup.html#details

=====================================================================
SUCCESS COMPILATION

20:10:07: Running steps for project DI_DIInterrupt...
20:10:07: Configuration unchanged, skipping qmake step.
20:10:07: Starting: "/usr/bin/make" -j8
/usr/bin/make -f Makefile.Debug
make[1]: Entering directory '/home/wruslan/WRY-pcie1884-qt5/Qt/build-DI_DIInterrupt-Desktop-Debug'
g++ -c -pipe -g -std=gnu++1z -Wall -Wextra -D_REENTRANT -fPIC -DQT_QML_DEBUG -DQT_WIDGETS_LIB -DQT_GUI_LIB -DQT_CORE_LIB -I../DI_DIInterrupt -I. -I../../../inc/bdaqctrl.h -I/opt/Qt/6.3.1/gcc_64/include -I/opt/Qt/6.3.1/gcc_64/include/QtWidgets -I/opt/Qt/6.3.1/gcc_64/include/QtGui -I/opt/Qt/6.3.1/gcc_64/include/QtCore -I../DI_DIInterrupt/debug/moc -I../DI_DIInterrupt/debug/ui -I/opt/Qt/6.3.1/gcc_64/mkspecs/linux-g++ -o ../DI_DIInterrupt/debug/configuredialog.o ../DI_DIInterrupt/configuredialog.cpp
../DI_DIInterrupt/configuredialog.cpp: In member function ‘void ConfigureDialog::DeviceChanged(int)’:
../DI_DIInterrupt/configuredialog.cpp:76:41: warning: unused parameter ‘index’ [-Wunused-parameter]
   76 | void ConfigureDialog::DeviceChanged(int index)
      |                                     ~~~~^~~~~
g++ -Wl,-rpath,/opt/Qt/6.3.1/gcc_64/lib -Wl,-rpath-link,/opt/Qt/6.3.1/gcc_64/lib -o ../bin/debug/DI_DIInterrupt  ../DI_DIInterrupt/debug/configuredialog.o ../DI_DIInterrupt/debug/main.o ../DI_DIInterrupt/debug/diinterrupt.o ../DI_DIInterrupt/debug/DioPortUI.o ../DI_DIInterrupt/debug/qrc_diinterrupt.o ../DI_DIInterrupt/debug/moc_configuredialog.o ../DI_DIInterrupt/debug/moc_diinterrupt.o ../DI_DIInterrupt/debug/moc_DioPortUI.o   -lbiodaq /opt/Qt/6.3.1/gcc_64/lib/libQt6Widgets.so /opt/Qt/6.3.1/gcc_64/lib/libQt6Gui.so /opt/Qt/6.3.1/gcc_64/lib/libQt6Core.so -lpthread -lGL   
make[1]: Leaving directory '/home/wruslan/WRY-pcie1884-qt5/Qt/build-DI_DIInterrupt-Desktop-Debug'
20:10:16: The process "/usr/bin/make" exited normally.
20:10:16: Elapsed time: 00:10.



EXECUTION ON THE NOTEBOOK (NO DEVICE HAHAHA)

20:10:16: Starting /home/wruslan/WRY-pcie1884-qt5/Qt/DI_DIInterrupt/../bin/debug/DI_DIInterrupt...
20:11:13: /home/wruslan/WRY-pcie1884-qt5/Qt/DI_DIInterrupt/../bin/debug/DI_DIInterrupt exited with code 0


=====================================================================
ALHAMDULILLAH 3 TIMES.
=====================================================================
